# crewAI

./: .env.example  .qrew_checkpoint.json  README.md  TODO.md  crewai_sqlite_integration_plan.md  dependency_analysis.md  et --hard HEAD@{2}  full_tree.txt  generate_integration_plan.py  generate_refactoring_report.py  generate_report.py  main.py  map_imports_to_files.py  parse_pipdeptree.py  progress_tracking.md  project_manager.py  projects_index.json  pyproject.toml  refactoring_targets.md  run_inference.py  scan_imports.py  storage_configuration_docs.md  termux_tool_compatibility.md  test_taskmaster_kb_interaction.py  test_tflite_import.py  test_tokenizer_no_onnx.py  utils.py  workflow.md
.db/objectbox/: data.mdb  lock.mdb
.github/workflows/: folders.yml  restructure.yml
crewAI/qrew/: __init__.py  llm_config.py  main.py
docs/concepts/: knowledge.mdx  memory.mdx
models/: schema.py
mycrews/qrew/: .qrew_checkpoint.json  __init__.py  config.py  llm_config.py  main  main.py  main_workflow.py  models.py  project_manager.py  projects_index.json  projects_index.json.bak  run_qrew_pipeline.py  tool_registry.py  utils.py  validated_crew.py
objectbox-data/: data.mdb  lock.mdb
qrew/: README.md  pyproject.toml
qrew/src/qrew/: crew.py  main.py
scripts/: init_objectbox.sh
src/crewai/: agent.py  crew.py  llm.py  task.py
src/q_ware/: __init__.py  llm_config.py  main.py  project_crew_factory.py
test_db_kb_tool/: data.mdb  lock.mdb
tools/: embedder.py  inbuilt_tools.py  objectbox-model.json  objectbox_memory.py  use_lite_embedding_tool.py
(+564 files in other folders)
