[project]
name = "crewai"
version = "0.126.0"
description = "Minimal setup of CrewAI for Termux"
readme = "README.md"
requires-python = ">=3.10,<3.14"

authors = [
    { name = "Joao Moura", email = "joao@crewai.com" }
]

dependencies = [
    "pydantic>=2.4.2",
    "openai>=1.13.3",
    "litellm==1.68.0",
    "instructor>=1.3.3",
    "regex>=2024.9.11",
    "click>=8.1.7",
    "appdirs>=1.4.4",
    "jsonref>=1.1.0",
    "json-repair>=0.25.2",
    "python-dotenv>=1.0.0",
    "blinker>=1.9.0",
    "tomli>=2.0.2",
    "tomli-w>=1.1.0",
    "json5>=0.10.0",
]

[project.optional-dependencies]
tools = ["crewai-tools~=0.46.0"]
openpyxl = ["openpyxl>=3.1.5"]
pdfplumber = ["pdfplumber>=0.11.4"]

[project.scripts]
crewai = "crewai.cli.cli:crewai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
