[project]
name = "qrew"
version = "0.1.0"
description = "Qrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
qrew = "qrew.main:run"
run_crew = "qrew.main:run"
train = "qrew.main:train"
replay = "qrew.main:replay"
test = "qrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
